--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -1,6 +1,6 @@
 <%- include('modules/header.ejs') %>
     <div class="container d-flex align-items-center" style="height:100%">
-        <div class="card justify-content-start d-flex flex-row" style="height: 90%; width: 100%;">
+        <div class="card justify-content-start d-flex flex-row mt-5" style="width: 100%;">
 
             <div class="card shadow" style="width: 30%; height: 100%;">
                 <div class="card shadow d-flex flex-row align-items-center" style="width: 100%; height: 15%;">
