--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
     <div class="container d-flex flex-column align-items-center justify-content-center bg-transparent" style="height: 100%">
         <img src="images/SocialNasaLogo.png" style="width: 20%; margin-bottom: -50px; z-index: 1; filter: drop-shadow(2px 4px 6px black);"/>
         <div class="card" style="width: 30%">
-            <form action="/" method="post" class="form-floating mx-3 mt-5">
+            <form action="/login" method="post" class="form-floating mx-3 mt-5">
                 <div class="form-floating mb-3">
                     <input type="text" name="login" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
                     <label for="floatingInput">Login</label>
