--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -15,7 +15,7 @@
                 <div class="d-flex flex-column align-items-center" style="width: 100%; height: 95%;">
                     <div class="d-flex flex-column align-items-center" style="width: 100%;">
                         <span class="mt-2">Diga tudo patrão!</span>
-                        <form action="/principal" method="post" style="width: 90%;">
+                        <form action="/" method="post" style="width: 90%;">
                             <textarea class="form-control shadow-lg" name="post" aria-label="With textarea" style="height: 150px; width: 100%;"></textarea>
                             <div class="d-flex flex-row justify-content-end align-items-center mt-2">
                                 <input class="me-1" type="checkbox" name="anon"/>
