Avatar IMG updating

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,6 +7,10 @@
                 <input class="form-control" name="username" type="text" placeholder="Username" aria-label=".form-control-lg example">
             </div>
             <div class="mt-3">
+                <label for="exampleFormControlInput1" class="form-label">Foto de Perfil</label>
+                <input type="text" name="avatarimg" class="form-control" id="exampleFormControlInput1" placeholder="www.img.com/suaimg.png">
+            </div>
+            <div class="mt-3">
                 <label for="exampleFormControlInput1" class="form-label">Descrição do Perfil</label>
                 <textarea class="form-control" name="desc" aria-label="With textarea" style="height: 150px; width: 100%;"></textarea>
             </div>
