--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -4,7 +4,7 @@
 
             <div class="card shadow" style="width: 30%; height: 100%;">
                 <div class="card shadow d-flex flex-row align-items-center" style="width: 100%; height: 15%;">
-                    <img src="images/tempimg/avatar.jpeg" class="ms-3 me-2 border border-info shadow rounded" style="width: 25%"/>
+                    <img src="<%= user.avatarimg %>" class="ms-3 me-2 border border-info shadow rounded" style="width: 100px"/>
                     <div class="d-flex flex-column">
                         <h4 class="mt-3"><%= user.username %></h4>
                         <p style="margin-top: -5px;"><%= user.descricao %></p>
@@ -30,7 +30,7 @@
                         <div class="d-flex flex-column align-items-center mt-2" style="width: 90%;">
                             <div class="card d-flex flex-row justify-content-start">
                                 <div style="width: 20%">
-                                    <img src="images/tempimg/avatar.jpeg" class="m-3 border border-info shadow rounded-circle" style="width: 60%"/>
+                                    <img src="<%= posts[i+pag*4].avatar %>" class="m-3 border border-info shadow rounded-circle" style="width: 50px"/>
                                 </div>
                                 <div class="d-flex flex-column align-items-start mt-3">
                                     <span><b><%= posts[i+pag*4].username %></b></span>
