--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -1,17 +1,10 @@
 <%- include('modules/header.ejs') %>
-    <div class="container d-flex align-items-center" style="height:100%">
-        <div class="card justify-content-start d-flex flex-row mt-5" style="width: 100%;">
-
-            <div class="card shadow" style="width: 30%; height: 100%;">
-                <div class="card shadow d-flex flex-row align-items-center" style="width: 100%; height: 15%;">
-                    <img src="<%= user.avatarimg %>" class="ms-3 me-2 border border-info shadow rounded" style="width: 100px"/>
-                    <div class="d-flex flex-column">
-                        <h4 class="mt-3"><%= user.username %></h4>
-                        <p style="margin-top: -5px;"><%= user.descricao %></p>
-                    </div>
-                </div>
+    <div class="container d-flex flex-column align-items-center" style="height:100%">
+        <div class="card align-items-center d-flex flex-column mt-3" style="width: 100%;">
+            <div style="width: 100%;">
+                <%- include('modules/navbar.ejs') %>
             </div>
-            <div class="d-flex flex-column align-items-center" style="width: 70%">
+            <div class="d-flex flex-column align-items-center" style="width: 100%">
                 <div class="d-flex flex-column align-items-center" style="width: 100%; height: 95%;">
                     <div class="d-flex flex-column align-items-center" style="width: 100%;">
                         <span class="mt-2">Diga tudo patrão!</span>
@@ -27,15 +20,13 @@
                     <% let i = 0 %>
                     <% let pag = page -1 %>
                     <% while(i != 4 && i+pag*4 != posts.length){ %>
-                        <div class="d-flex flex-column align-items-center mt-2" style="width: 90%;">
-                            <div class="card d-flex flex-row justify-content-start">
-                                <div style="width: 20%">
-                                    <img src="<%= posts[i+pag*4].avatar %>" class="m-3 border border-info shadow rounded-circle" style="width: 50px"/>
-                                </div>
-                                <div class="d-flex flex-column align-items-start mt-3">
-                                    <span><b><%= posts[i+pag*4].username %></b></span>
-                                    <p><i><%= posts[i+pag*4].post %></i></p>
-                                </div>
+                        <div class="card my-2" style="width: 90%;">
+                            <div class="card-header d-flex flex-row">
+                                <img src="<%= posts[i+pag*4].avatar %>" class="shadow rounded-circle post-image"/>
+                                <h5 class="pt-2"><%= posts[i+pag*4].username %></h5>
+                            </div>
+                            <div class="card-text p-2">
+                                <p><i><%= posts[i+pag*4].post %></i></p>
                             </div>
                         </div>
                     <%  i++;} %>
@@ -44,16 +35,16 @@
                         <ol class="breadcrumb">
                             <% if(page == 1){ %> <li class="breadcrumb-item active" aria-current="page">1</li> <% }else{ %> 
 
-                                <li class="breadcrumb-item"><a href="/principal?page=1">1</a></li>
+                                <li class="breadcrumb-item"><a href="/?page=1">1</a></li>
                                 <% if(page >= 3){ %>
-                                <li class="breadcrumb-item"><a href="/principal?page=<%= parseInt(page)-1 %>"> <%= parseInt(page)-1 %></a></li>
+                                <li class="breadcrumb-item"><a href="/?page=<%= parseInt(page)-1 %>"> <%= parseInt(page)-1 %></a></li>
                                 <% } %>
                                 <li class="breadcrumb-item active" aria-current="page"> <%= page %> </li>
                             <% } %>
                             <% if(page != Math.ceil(parseInt(posts.length)/4)){ %>
-                                <li class="breadcrumb-item"><a href="/principal?page=<%= parseInt(page)+1 %>"><%= parseInt(page)+1 %></a></li>
+                                <li class="breadcrumb-item"><a href="/?page=<%= parseInt(page)+1 %>"><%= parseInt(page)+1 %></a></li>
                             <% if(page != Math.ceil(parseInt(posts.length)/4)-1){ %>
-                                <li class="breadcrumb-item"><a href="/principal?page=<%= Math.ceil(parseInt(posts.length)/4) %>"><%= Math.ceil(parseInt(posts.length)/4) %></a></li>
+                                <li class="breadcrumb-item"><a href="/?page=<%= Math.ceil(parseInt(posts.length)/4) %>"><%= Math.ceil(parseInt(posts.length)/4) %></a></li>
                             <% }} %>
                             
                         </ol>
