--- a/SocialNasahFront/views/edit.ejs
+++ b/SocialNasahFront/views/edit.ejs
@@ -7,20 +7,20 @@
             <form  action="/edit" method="post" style="width: 90%;">
                 <div class="mt-3">
                     <label for="exampleFormControlInput1" class="form-label">Nova foto de Perfil</label>
-                    <input type="text" name="avatarimg" class="form-control" id="exampleFormControlInput1" placeholder="www.img.com/suaimg.png">
+                    <input type="text" name="avatarimg" class="form-control" id="exampleFormControlInput1" placeholder="www.img.com/suaimg.png" value="<%= user.avatarimg %>">
                 </div>
                 <div class="mt-3">
                     <label for="exampleFormControlInput1" class="form-label">Descrição:</label>
-                    <textarea class="form-control shadow-lg" name="desc" aria-label="With textarea" style="height: 150px; width: 100%;"></textarea>
+                    <textarea class="form-control shadow-lg" name="desc" aria-label="With textarea" style="height: 150px; width: 100%;" ><%= user.desc %></textarea>
                 </div>
                 <div class="mt-3">
                     <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                    <input type="email" name="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                    <input type="email" name="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" value="<%= user.email %>">
                 </div>
                 <div class="mt-3">
                     <label for="exampleFormControlInput1" class="form-label">Senha</label>
-                    <input class="form-control" name="senha" type="password" placeholder="Senha" aria-label=".form-control-lg example">
-                    <input class="form-control mt-2" name="senha_confirm" type="password" placeholder="Repita a senha" aria-label=".form-control-lg example">
+                    <input class="form-control" name="senha" type="password" placeholder="Senha" aria-label=".form-control-lg example" value="<%= user.senha %>">
+                    <input class="form-control mt-2" name="senha_confirm" type="password" placeholder="Repita a senha" aria-label=".form-control-lg example" value="<%= user.senha %>">
                 </div>
                 <div class="m-2 d-flex flex-column align-items-center" style="width: 100%;">
                     <button type="submit" class="btn btn-secondary p-2">Alterar</button>
