--- a/SocialNasahFront/views/modules/navbar.ejs
+++ b/SocialNasahFront/views/modules/navbar.ejs
@@ -9,10 +9,13 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/edit"><%= user.username %></a>
           </li>
-          <!--
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="/">Home</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/members">Membros</a>
+          </li>
+          <!--
           <li class="nav-item">
             <a class="nav-link disabled">Disabled</a>
           </li>
