--- a/SocialNasahFront/views/modules/header.ejs
+++ b/SocialNasahFront/views/modules/header.ejs
@@ -6,4 +6,4 @@
     <link rel="stylesheet" href="css/style.css">
     <title>SocialNasah</title>
 </head>
-<body style="background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%); width: 100%; height:100%"></body>
+<body style="background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%); width: auto; height:auto"></body>
