--- a/SocialNasahFront/views/modules/navbar.ejs
+++ b/SocialNasahFront/views/modules/navbar.ejs
@@ -25,6 +25,14 @@
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
         -->
+        </ul>
+        <div class="pb-5 d-flex flex-column align-items-end">
+          <h5 class="mb-1">
+            <% let today = new Date() %>
+            <%= today.toLocaleDateString('pt-BR') %>
+          </h5>
+          <span><%= today.toLocaleDateString('pt-BR', {weekday: 'long'}) %></span>
+        </div>
       </div>
     </div>
   </nav>
