--- a/SocialNasahFront/views/modules/header.ejs
+++ b/SocialNasahFront/views/modules/header.ejs
@@ -1,9 +1,20 @@
+<!DOCTYPE html>
 <html lang="pt-br" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        body {
+            background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+            min-height: 100vh; /* Define a altura mínima do corpo para ocupar pelo menos toda a altura da janela de visualização */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+        }
+    </style>
     <title>SocialNasah</title>
 </head>
-<body style="background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%); width: auto; height:auto"></body>
+<body>
