--- a/SocialNasahFront/views/principal.ejs
+++ b/SocialNasahFront/views/principal.ejs
@@ -1,6 +1,6 @@
 <%- include('modules/header.ejs') %>
     <div class="container d-flex flex-column align-items-center" style="height:100%">
-        <div class="card align-items-center d-flex flex-column mt-3" style="width: 100%;">
+        <div class="card align-items-center d-flex flex-column my-3" style="width: 100%;">
             <div style="width: 100%;">
                 <%- include('modules/navbar.ejs') %>
             </div>
@@ -22,9 +22,9 @@
                         <% posts.forEach(function(post) { %>
                         <div class="card my-2" style="width: 90%;">
                             <div class="card-header d-flex flex-row">
-                                <div class="d-flex flex-row" style="width: 20%">
+                                <div class="d-flex flex-row align-items-center" style="width: 20%">
                                     <img src="<%= post.avatarimg %>" class="shadow rounded-circle post-image"/>
-                                    <h5 class="pt-2"><%= post.username %></h5>
+                                    <h5 class="m-0" style="font-size: medium;"><%= post.username %></h5>
                                 </div>
                                 <div class="d-flex flex-row justify-content-end" style="width: 80%">
                                     <p style="font-size: x-small;"><%= new Date(post.createdAt).toLocaleString() %></p>
