Add the new logotipe

--- a/SocialNasahFront/views/login.ejs
+++ b/SocialNasahFront/views/login.ejs
@@ -1,6 +1,6 @@
 <%- include('modules/header.ejs') %>
     <div class="container d-flex flex-column align-items-center justify-content-center bg-transparent" style="height: 100%">
-        <img src="images/SocialNasaLogo.png" style="width: 20%; margin-bottom: -50px; z-index: 1; filter: drop-shadow(2px 4px 6px black);"/>
+        <img src="images/Logo.png" style="width: 20%; margin-bottom: -50px; z-index: 1; filter: drop-shadow(2px 4px 6px black);"/>
         <div class="card" style="width: 30%">
             <form action="/login" method="post" class="form-floating mx-3 mt-5">
                 <div class="form-floating mb-3">
