--- a/SocialNasahFront/views/register.ejs
+++ b/SocialNasahFront/views/register.ejs
@@ -1,6 +1,6 @@
 <%- include('modules/header.ejs') %>
 <div class="container d-flex flex-column align-items-center justify-content-center bg-transparent" style="height: 90%">
-    <img src="images/SocialNasaLogo.png" style="width: 20%; margin-bottom: -50px; z-index: 1; filter: drop-shadow(2px 4px 6px black);"/>
+    <img src="images/Logo.png" style="width: 20%; margin-bottom: -50px; z-index: 1; filter: drop-shadow(2px 4px 6px black);"/>
         <form class="form-control pt-4 mt-2" style="width: 50%;" action="/register" method="post">
             <div>
                 <label for="exampleFormControlInput1" class="form-label">Username</label>
